--- a/contact-us/index.html
+++ b/contact-us/index.html
@@ -4,11 +4,11 @@ layout: default
 
   <div class="site-banner">
     <div class="banner-image">
-      <img src="assets/img/slide-1.jpg" alt="Banner">
+      <img src="/img/header-2.png" alt="Banner">
     </div>
     <div class="banner-caption shadow">
       <div class="caption-wrapper">
-            <h1>CONTACT</h1>
+            <h1>CONTACT US</h1>
             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas eget tincidunt odio. Nunc maximus malesuada nunc vitae accumsan. Aliquam condimentum laoreet dui. Phasellus est mi, finibus at magna in, venenatis pharetra massa. In hac habitasse platea dictumst.</p>
         </div>
     </div>
@@ -32,31 +32,26 @@ layout: default
                 <div class="col-md-6 col-sm-6">
                     <h3 class="font-w700 margin-b40">GET IN TOUCH</h3>
                     <div class="data-form">
-                        <form action="contact.php" id="contact-form" method="post">
+                        <form action="http://formspree.io/stabalong@appsource.biz" id="contact-form" method="post">
                             <div class="row">
-                                <div class="col-md-6">
+                                <div class="col-md-12">
                                     <label>Name</label>
-                                    <input type="text" id="form-name" name="form-name" placeholder="Enter your name">
+                                    <input type="text" id="form-name" name="name" placeholder="Enter your name" required>
                                 </div>
-                                <div class="col-md-6">
-                                    <label>Surname</label>
-                                    <input type="text" id="form-surname" name="form-surname" placeholder="Enter your surname">
-                                </div>
-                                <div class="col-md-6">
-                                    <label>Phone</label>
-                                    <input type="text" id="form-phone" name="form-phone" placeholder="Enter your phone number">
-                                </div>
-                                <div class="col-md-6">
-                                    <label>EMail</label>
-                                    <input type="text" id="form-email" name="form-email" placeholder="Enter your email">
+                                <div class="col-md-12">
+                                    <label>E-mail</label>
+                                    <input type="text" id="form-name" name="_replyto" placeholder="We will send you reply to this email" required>
                                 </div>
                                 <div class="col-md-12">
                                     <label>Subject</label>
-                                    <input type="text" id="form-subject" name="form-subject" placeholder="Enter subject">
+                                    <input type="text" id="form-email" name="_subject" placeholder="Enter subject" required>
                                 </div>
                                 <div class="col-md-12">
                                     <label>Message</label>
-                                    <textarea cols="6" rows="8" id="form-message" name="form-message" placeholder="Enter your message"></textarea>
+                                    <textarea cols="6" rows="8" id="form-message" name="form-message" placeholder="Enter your message" required></textarea>
+                                </div>
+                                <div class="col-md-12">
+                                  <input type="text" name="_gotcha" style="display:none" />
                                 </div>
                                 <div class="col-md-12">
                                     <input type="submit" value="SEND MESSAGE" class="btn btn-red">
@@ -68,26 +63,24 @@ layout: default
                 </div>
                 <div class="col-md-6 col-sm-6">
                     <h3 class="font-w700 margin-b40">CONTACT INFO</h3>
-                    <h4 class="margin-b20">Corporate Headquarter</h4>
+                    <h4 class="margin-b20">Manila Office</h4>
                     <ul class="contact-list">
-                        <li><i class="fa fa-map-marker"></i> 2st Floor Road London SE1 7AA</li>
-                        <li><i class="fa fa-phone"></i> +20 7702 1377</li>
-                        <li><i class="fa fa-envelope-o"></i> <a href="mailto:info@corpoteratechnology.com" class="btn btn-link">info@corpoteratechnology.com</a></li>
+                        <li><i class="fa fa-map-marker"></i> UNIT D, BELVEDERE TOWER, ORTIGAS CENTER</li>
+                        <li><i class="fa fa-phone"></i> +632 650 6565</li>
+                        <li><i class="fa fa-envelope-o"></i> <a href="mailto:info@britishcambridge.net" class="btn btn-link">info@britishcambridge.net</a></li>
                     </ul>
                     <hr class="margin-v40">
-                    <h4 class="margin-b20">Canada Office</h4>
+                    <h4 class="margin-b20">Singapore Office</h4>
                     <ul class="contact-list">
-                        <li><i class="fa fa-map-marker"></i> 2st Floor Road London SE1 7AA</li>
-                        <li><i class="fa fa-phone"></i> +20 7702 1377</li>
-                        <li><i class="fa fa-envelope-o"></i> <a href="mailto:info@corpoteratechnology.com" class="btn btn-link">info@corpoteratechnology.com</a></li>
+                        <li><i class="fa fa-map-marker"></i> UNIT D, BELVEDERE TOWER, ORTIGAS CENTER</li>
+                        <li><i class="fa fa-phone"></i> +632 650 6565</li>
+                        <li><i class="fa fa-envelope-o"></i> <a href="mailto:info@britishcambridge.net" class="btn btn-link">info@britishcambridge.net</a></li>
                     </ul>
                     <hr class="margin-v40">
                     <h4 class="margin-b20">Follow Us Social Media</h4>
                     <ul class="social-icons social-round social-hovered clearfix">
                         <li class="facebook"><a href="#"><i class="fa fa-facebook"></i></a></li>
-                        <li class="twitter"><a href="#"><i class="fa fa-twitter"></i></a></li>
                         <li class="linkedin"><a href="#"><i class="fa fa-linkedin"></i></a></li>
-                        <li class="google-plus"><a href="#"><i class="fa fa-google-plus"></i></a></li>
                     </ul>
                 </div>
             </div>
@@ -96,8 +89,8 @@ layout: default
 
         <!-- Section Map -->
         <section class="site-block full border-top white" id="section-map">
-            <h2 class="section-title">Headquarter Location</h2>
-            <h4 class="section-desc">Application Innovation Services delivers robust solutions for industry leadership in today's complex world</h4>
+            <h2 class="section-title">Manila Office</h2>
+            <h4 class="section-desc">Lorem ipsum dolor sit amet, consectetur adipisicing elit. </h4>
             <div class="google-map"></div>
         </section>
         <!-- Section Map End -->
