--- a/corporate/listed/index.html
+++ b/corporate/listed/index.html
@@ -4,7 +4,7 @@ layout: default
 
 	<div class="site-banner">
 		<div class="banner-image">
-			<img src="assets/img/header-3.jpg" alt="Banner">
+			<img src="/img/header-3.jpg" alt="Banner">
 		</div>
 		<div class="banner-caption shadow">
 			<div class="caption-wrapper">
@@ -16,154 +16,104 @@ layout: default
 </header>
 
 <main>
-    <div class="site-wrapper">
-        <!-- Section Breadcrumb -->
-        <div class="site-block white" id="section-breadcrumb">
-            <ol class="breadcrumb">
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Corporate</a></li>
-                <li class="active">Clients</li>
-            </ol>
-        </div>
-        <!-- Section Breadcrumb End -->
-
-        <!-- Section Filter -->
-        <section class="site-block grey" id="section-filter">
-            <div class="client-filter">
-                <div class="row">
-                    <div class="col-md-3 col-sm-3">
-                        <h5>Filter By:</h5>
-                    </div>
-                    <div class="col-md-3 col-sm-3 cf-select">
-                        <i class="fa fa-angle-down"></i>
-                        <select>
-                            <option value="">All Industries</option>
-                            <option value="1">Technology</option>
-                            <option value="2">Footwear</option>
-                            <option value="3">Health &amp; Beauty</option>
-                            <option value="4">Outdoor &amp; Sporting</option>
-                            <option value="5">Specialty</option>
-                        </select>
-                    </div>
-                    <div class="col-md-3 col-sm-3 cf-select">
-                        <i class="fa fa-angle-down"></i>
-                        <select>
-                            <option value="">All Regions</option>
-                            <option value="4">DE</option>
-                            <option value="6">FR</option>
-                            <option value="7">IT</option>
-                            <option value="8">JP</option>
-                            <option value="9">UK</option>
-                        </select>
-                    </div>
-                    <div class="col-md-3 col-sm-3 cf-select">
-                        <i class="fa fa-angle-down"></i>
-                        <select>
-                            <option value="">Sort</option>
-                            <option value="a-z">A-Z</option>
-                            <option value="z-a">Z-A</option>
-                            <option value="latest">Latest</option>
-                        </select>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!-- Section Filter End -->
-
-        <!-- Section Clients -->
-        <section class="site-block white" id="section-clients">
-            <div class="client-list type-three">
-                <ul>
-                    <li>
-                        <div class="client-logo">
-                            <a href="#"><img src="/img/appsource.png" alt="AppSource" class="img-full"></a>
-                        </div>
-                        <div class="client-content">
-                            <h3>APPSOURCE</h3>
-                            <h4>Application Innovation Services delivers robust solutions for industry leadership in today's</h4>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas eget tincidunt odio. Nunc maximus malesuada nunc vitae accumsan. Aliquam condimentum laoreet dui. Phasellus est mi, finibus at magna in, venenatis pharetra massa. In hac habitasse platea dictumst.</p>
-                            <h5>MARILYN SUTTLE</h5>
-                            <h6>ACCOUNTANT MANAGER</h6>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="client-logo">
-                            <a href="#"><img src="assets/img/client-2.png" alt="Client Name" class="img-full"></a>
-                        </div>
-                        <div class="client-content">
-                            <h3>MICROSOFT</h3>
-                            <h4>Application Innovation Services delivers robust solutions for industry leadership in today's</h4>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas eget tincidunt odio. Nunc maximus malesuada nunc vitae accumsan. Aliquam condimentum laoreet dui. Phasellus est mi, finibus at magna in, venenatis pharetra massa. In hac habitasse platea dictumst.</p>
-                            <h5>JACK MASON</h5>
-                            <h6>BOARD MEMBER</h6>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="client-logo">
-                            <a href="#"><img src="assets/img/client-3.png" alt="Client Name" class="img-full"></a>
-                        </div>
-                        <div class="client-content">
-                            <h3>YAHOO</h3>
-                            <h4>Application Innovation Services delivers robust solutions for industry leadership in today's</h4>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas eget tincidunt odio. Nunc maximus malesuada nunc vitae accumsan. Aliquam condimentum laoreet dui. Phasellus est mi, finibus at magna in, venenatis pharetra massa. In hac habitasse platea dictumst.</p>
-                            <h5>MICHAEL FELDSTEIN</h5>
-                            <h6>PUBLIC RELATIONS</h6>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="client-logo">
-                            <a href="#"><img src="assets/img/client-4.png" alt="Client Name" class="img-full"></a>
-                        </div>
-                        <div class="client-content">
-                            <h3>ENVATO</h3>
-                            <h4>Application Innovation Services delivers robust solutions for industry leadership in today's</h4>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas eget tincidunt odio. Nunc maximus malesuada nunc vitae accumsan. Aliquam condimentum laoreet dui. Phasellus est mi, finibus at magna in, venenatis pharetra massa. In hac habitasse platea dictumst.</p>
-                            <h5>JOHN FEDERICO</h5>
-                            <h6>FINANCE MANAGER</h6>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="client-logo">
-                            <a href="#"><img src="assets/img/client-5.png" alt="Client Name" class="img-full"></a>
-                        </div>
-                        <div class="client-content">
-                            <h3>QUERY</h3>
-                            <h4>Application Innovation Services delivers robust solutions for industry leadership in today's</h4>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas eget tincidunt odio. Nunc maximus malesuada nunc vitae accumsan. Aliquam condimentum laoreet dui. Phasellus est mi, finibus at magna in, venenatis pharetra massa. In hac habitasse platea dictumst.</p>
-                            <h5>MARILYN SUTTLE</h5>
-                            <h6>ACCOUNTANT MANAGER</h6>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="client-logo">
-                            <a href="#"><img src="assets/img/client-6.png" alt="Client Name" class="img-full"></a>
-                        </div>
-                        <div class="client-content">
-                            <h3>AMAZON</h3>
-                            <h4>Application Innovation Services delivers robust solutions for industry leadership in today's</h4>
-                            <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas eget tincidunt odio. Nunc maximus malesuada nunc vitae accumsan. Aliquam condimentum laoreet dui. Phasellus est mi, finibus at magna in, venenatis pharetra massa. In hac habitasse platea dictumst.</p>
-                            <h5>JACK MASON</h5>
-                            <h6>BOARD MEMBER</h6>
-                        </div>
-                    </li>
-                </ul>
-            </div>
-        </section>
-        <!-- Section Clients End -->
-
-        <!-- Section Promo -->
-        <section class="site-block border-top white" id="section-promo">
-            <div class="site-promo type-one">
-                <div class="row">
-                    <div class="col-md-9">
-                        <h3>Get started with the leading corpo management solution.</h3>
-                    </div>
-                    <div class="col-md-3 align-right">
-                        <a href="#" class="btn btn-red btn-round">GET IN TOUCH</a>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!-- Section Promo End -->
+  <div class="site-wrapper">
+    <!-- Section Breadcrumb -->
+    <div class="site-block white" id="section-breadcrumb">
+      <ol class="breadcrumb">
+        <li><a href="/">Home</a></li>
+        <li><a href="/corporate/about-us/">Corporate</a></li>
+        <li class="active">Listed Companies</li>
+      </ol>
     </div>
+    <!-- Section Breadcrumb End -->
+
+    <!-- Section Clients -->
+    <section class="site-block white" id="section-clients">
+      <div class="client-list type-three">
+        <ul>
+          <li>
+            <div class="client-logo">
+              <img src="/img/appsource.png" alt="AppSource" class="img-full">
+            </div>
+            <div class="client-content">
+              <h3>APPSOURCE</h3>
+              <p>
+								AppSource is a Philippines based IT and Consulting Company.
+								AppSource current has a team of over 150 IT &amp; software developers.<br>
+								AppSource clients includes some of the biggest organizations in the world: Asian Development Bank, EastWest Bank, Islamic Bank, National Police Commission, Trend Micro, USAID etc.
+							</p>
+							<p>
+								AppSource plans to list by the 1st.Quarter of 2017.
+								AppSource is expected a market value of US$300 Million upon its listing
+							</p>
+							<p>
+								<a target="_blank" href="http://appsource.biz" class="btn btn-grey btn-round">VISIT WEBSITE <i class="fa fa-long-arrow-right ml5"></i></a>
+							</p>
+            </div>
+          </li>
+            <li>
+              <div class="client-logo">
+                <img src="/img/bcc.png" alt="British Cambridge College" class="img-full">
+              </div>
+              <div class="client-content">
+                <h3>BRITISH CAMBRIDGE COLLEGE</h3>
+                <p>
+									British Cambridge College develops a wide range of programs which are accredited by various awarding and accrediting bodies in the United Kingdom.
+								</p>
+								<p>
+									Currently more than 50 universities, colleges and schools are currently offering our programs at their campuses and centers.
+								</p>
+								<p>
+									<a target="_blank" href="http://www.bccolleges.co.uk" class="btn btn-grey btn-round">VISIT WEBSITE <i class="fa fa-long-arrow-right ml5"></i></a>
+								</p>
+              </div>
+            </li>
+            <li>
+              <div class="client-logo">
+                <img src="/img/servebank.png" alt="Client Name" class="img-full">
+              </div>
+              <div class="client-content">
+                <h3>SERVEBANK FINANCIAL</h3>
+								<p>
+									ServeBank Crowdfunding site do not showcase startups with high investment risks. ServeBank Crowdfunding site showcase:<br>
+								</p>
+								<p>
+									- Companies that are profitable<br>
+									- Companies that operating and generating revenues<br>
+									- Companies that are already listed or planning for listing soon We currently managed the portfolio of companies with a total market cap of US$1 Billion.<br>
+								</p>
+								<p>
+									We will not showcase companies which we have not invested, partnered or worked for ourselves. ServeBank Financial Inc. plans to list by the first quarter of 2018. ServeBank is expected to achieve a market value of US$2 Billion upon its listing.
+								</p>
+								<p>
+									<a target="_blank" href="http://www.servebank.org" class="btn btn-grey btn-round">VISIT WEBSITE <i class="fa fa-long-arrow-right ml5"></i></a>
+								</p>
+              </div>
+            </li>
+            <li>
+              <div class="client-logo">
+                <img src="/img/tcm.png" alt="Client Name" class="img-full">
+              </div>
+              <div class="client-content">
+                <h3>THE CAMBRIDGE MEDICAL GROUP</h3>
+                <p>
+									The Cambridge Mediplus (TCM) is a partnership between British Cambridge &amp; YSY Group Singapore. TCM plans to establish medical college and clinics across Asia.
+								<p>
+								<p>
+									YSY currently operates a manufacturing facility and several medical clinics across Singapore. YSY is the 1st.accredited manufacturer of natural medicines in Singapore for the past 30 years.
+									The products manufactured by YSY are accredited by the Health Science Authority (HAS) in Singapore.
+								</p>
+								<p>
+									TCM plans to list by the first quarter of 2019 TCM is expected to achieve a market value of US$.
+								</p>
+								<p>
+									<a target="_blank" href="http://www.cambridgemedical.org" class="btn btn-grey btn-round">VISIT WEBSITE <i class="fa fa-long-arrow-right ml5"></i></a>
+								</p>
+              </div>
+            </li>
+        </ul>
+      </div>
+    </section>
+    <!-- Section Clients End -->
+  </div>
 </main>
