--- a/services/investing/index.html
+++ b/services/investing/index.html
@@ -4,11 +4,11 @@ layout: default
 
   <div class="site-banner">
     <div class="banner-image">
-      <img src="assets/img/slide-1.jpg" alt="Banner">
+      <img src="/img/header-1.png" alt="Banner">
     </div>
     <div class="banner-caption shadow">
       <div class="caption-wrapper">
-        <h1>SERVICES</h1>
+        <h1>Investing</h1>
         <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas eget tincidunt odio. Nunc maximus malesuada nunc vitae accumsan. Aliquam condimentum laoreet dui. Phasellus est mi, finibus at magna in, venenatis pharetra massa. In hac habitasse platea dictumst.</p>
         </div>
     </div>
@@ -17,174 +17,85 @@ layout: default
 
 <!-- Site Main -->
 <main>
-    <div class="site-wrapper">
-        <!-- Section Breadcrumb -->
-        <div class="site-block white" id="section-breadcrumb">
-            <ol class="breadcrumb">
-                <li><a href="#">Home</a></li>
-                <li class="active">Services</li>
-            </ol>
-        </div>
-        <!-- Section Breadcrumb End -->
-
-        <!-- Section Services -->
-        <section class="site-block white" id="section-services">
-            <div class="services-list type-two">
-                <ul>
-                    <li>
-                        <div class="row large">
-                            <div class="col-md-4 col-md-push-8 col-sm-4 col-sm-push-8">
-                                <img src="assets/img/service-1-big.png" alt="Service Name" class="img-full">
-                            </div>
-                            <div class="col-md-8 col-md-pull-4 col-sm-8 col-sm-pull-4 align-justify">
-                                <h5>BUSINESS</h5>
-                                <h2>Business Analytics</h2>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas eget tincidunt odio. Nunc maximus malesuada nunc vitae accumsan. Aliquam condimentum laoreet dui. Phasellus est mi, finibus at magna in, venenatis pharetra massa. In hac habitasse platea dictumst. Ut quam felis, ornare sed nulla sed, lobortis mollis arcu. Sed dui velit, tristique sit amet lorem at, sollicitudin porta metus. Mauris aliquam elit in lectus euismod, eget placerat tortor varius. Morbi et nisi velit. Nam euismod odio eget ultricies maximus. Integer auctor neque et ligula tempus, at porta metus ornare.</p>
-                                <p>Quisque sollicitudin facilisis est nec pellentesque. Nam et dignissim augue, non tempus velit. Vivamus sollicitudin at nisl et maximus.</p>
-                                <p><a href="#" class="btn btn-grey btn-round">FIND OUT MORE</a></p>
-                            </div>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="row large">
-                            <div class="col-md-4 col-sm-4">
-                                <img src="assets/img/service-2-big.png" alt="Service Name" class="img-full">
-                            </div>
-                            <div class="col-md-8 col-sm-8 align-justify">
-                                <h5>CLOUD</h5>
-                                <h2>Cloud Services</h2>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas eget tincidunt odio. Nunc maximus malesuada nunc vitae accumsan. Aliquam condimentum laoreet dui. Phasellus est mi, finibus at magna in, venenatis pharetra massa. In hac habitasse platea dictumst. Ut quam felis, ornare sed nulla sed, lobortis mollis arcu. Sed dui velit, tristique sit amet lorem at, sollicitudin porta metus. Mauris aliquam elit in lectus euismod, eget placerat tortor varius. Morbi et nisi velit. Nam euismod odio eget ultricies maximus. Integer auctor neque et ligula tempus, at porta metus ornare.</p>
-                                <p>Quisque sollicitudin facilisis est nec pellentesque. Nam et dignissim augue, non tempus velit. Vivamus sollicitudin at nisl et maximus.</p>
-                                <p><a href="#" class="btn btn-grey btn-round">FIND OUT MORE</a></p>
-                            </div>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="row large">
-                            <div class="col-md-4 col-md-push-8 col-sm-4 col-sm-push-8">
-                                <img src="assets/img/service-3-big.png" alt="Service Name" class="img-full">
-                            </div>
-                            <div class="col-md-8 col-md-pull-4 col-sm-8 col-sm-pull-4 align-justify">
-                                <h5>MOBILE</h5>
-                                <h2>Mobility Services</h2>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas eget tincidunt odio. Nunc maximus malesuada nunc vitae accumsan. Aliquam condimentum laoreet dui. Phasellus est mi, finibus at magna in, venenatis pharetra massa. In hac habitasse platea dictumst. Ut quam felis, ornare sed nulla sed, lobortis mollis arcu. Sed dui velit, tristique sit amet lorem at, sollicitudin porta metus. Mauris aliquam elit in lectus euismod, eget placerat tortor varius. Morbi et nisi velit. Nam euismod odio eget ultricies maximus. Integer auctor neque et ligula tempus, at porta metus ornare.</p>
-                                <p>Quisque sollicitudin facilisis est nec pellentesque. Nam et dignissim augue, non tempus velit. Vivamus sollicitudin at nisl et maximus.</p>
-                                <p><a href="#" class="btn btn-grey btn-round">FIND OUT MORE</a></p>
-                            </div>
-                        </div>
-                    </li>
-                    <li>
-                        <div class="row large">
-                            <div class="col-md-4 col-sm-4">
-                                <img src="assets/img/service-1-big.png" alt="Service Name" class="img-full">
-                            </div>
-                            <div class="col-md-8 col-sm-8 align-justify">
-                                <h5>INTERACTIVE</h5>
-                                <h2>Interactive Experience</h2>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas eget tincidunt odio. Nunc maximus malesuada nunc vitae accumsan. Aliquam condimentum laoreet dui. Phasellus est mi, finibus at magna in, venenatis pharetra massa. In hac habitasse platea dictumst. Ut quam felis, ornare sed nulla sed, lobortis mollis arcu. Sed dui velit, tristique sit amet lorem at, sollicitudin porta metus. Mauris aliquam elit in lectus euismod, eget placerat tortor varius. Morbi et nisi velit. Nam euismod odio eget ultricies maximus. Integer auctor neque et ligula tempus, at porta metus ornare.</p>
-                                <p>Quisque sollicitudin facilisis est nec pellentesque. Nam et dignissim augue, non tempus velit. Vivamus sollicitudin at nisl et maximus.</p>
-                                <p><a href="#" class="btn btn-grey btn-round">FIND OUT MORE</a></p>
-                            </div>
-                        </div>
-                    </li>
-                </ul>
-            </div>
-        </section>
-        <!-- Section Services End -->
-
-        <!-- Section Pricing -->
-        <section class="site-block border-top white" id="section-pricing">
-            <h2 class="section-title">Pricing Table</h2>
-            <h4 class="section-desc">Application Innovation Services delivers robust solutions for industry leadership in today's complex world</h4>
-            <div class="pricing-table">
-                <div class="row">
-                    <div class="col-md-3 col-sm-6">
-                        <div class="item">
-                            <div class="pt-header">
-                                <h2>BASIC</h2>
-                                <h3><sup>$</sup>79<span>/mo</span></h3>
-                            </div>
-                            <div class="pt-main">
-                                <h4>Unlimited Space</h4>
-                                <ul>
-                                    <li>100 GB Storage</li>
-                                    <li>1 GB Bandwidth</li>
-                                    <li>20 Database</li>
-                                    <li>50 Mail Account</li>
-                                    <li>Email Support</li>
-                                </ul>
-                            </div>
-                            <div class="pt-footer">
-                                <a href="#" class="btn btn-blue btn-round">SIGN UP</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-3 col-sm-6">
-                        <div class="item">
-                            <div class="pt-header">
-                                <h2>STARTUP</h2>
-                                <h3><sup>$</sup>169<span>/mo</span></h3>
-                            </div>
-                            <div class="pt-main">
-                                <h4>Unlimited Space</h4>
-                                <ul>
-                                    <li>100 GB Storage</li>
-                                    <li>1 GB Bandwidth</li>
-                                    <li>20 Database</li>
-                                    <li>50 Mail Account</li>
-                                    <li>Email Support</li>
-                                </ul>
-                            </div>
-                            <div class="pt-footer">
-                                <a href="#" class="btn btn-blue btn-round">SIGN UP</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-3 col-sm-6">
-                        <div class="item active">
-                            <div class="pt-header">
-                                <h2>PREMIUM</h2>
-                                <h3><sup>$</sup>259<span>/mo</span></h3>
-                            </div>
-                            <div class="pt-main">
-                                <h4>Unlimited Space</h4>
-                                <ul>
-                                    <li>100 GB Storage</li>
-                                    <li>1 GB Bandwidth</li>
-                                    <li>20 Database</li>
-                                    <li>50 Mail Account</li>
-                                    <li>Email Support</li>
-                                </ul>
-                            </div>
-                            <div class="pt-footer">
-                                <a href="#" class="btn btn-blue btn-round">SIGN UP</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div class="col-md-3 col-sm-6">
-                        <div class="item">
-                            <div class="pt-header">
-                                <h2>ENTERPRISE</h2>
-                                <h3><sup>$</sup>349<span>/mo</span></h3>
-                            </div>
-                            <div class="pt-main">
-                                <h4>Unlimited Space</h4>
-                                <ul>
-                                    <li>100 GB Storage</li>
-                                    <li>1 GB Bandwidth</li>
-                                    <li>20 Database</li>
-                                    <li>50 Mail Account</li>
-                                    <li>Email Support</li>
-                                </ul>
-                            </div>
-                            <div class="pt-footer">
-                                <a href="#" class="btn btn-blue btn-round">SIGN UP</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </section>
-        <!-- Section Pricing End -->
+  <div class="site-wrapper">
+    <!-- Section Breadcrumb -->
+    <div class="site-block white" id="section-breadcrumb">
+      <ol class="breadcrumb">
+        <li><a href="#">Home</a>
+        </li>
+        <li><a href="#">Services</a>
+        </li>
+        <li class="active">Investing</li>
+      </ol>
     </div>
+    <!-- Section Breadcrumb End -->
+
+    <!-- Section Services -->
+    <section class="site-block white" id="section-services">
+      <div class="services-list type-two">
+        <ul>
+          <li>
+            <div class="row large">
+              <div class="col-md-12 align-center">
+                <h2>What We Invest</h2>
+                <h5>
+                                  Companies with public listing potential</h5>
+                <h5>Companies with all sectors and industries</h5>
+                <h5>Companies with strong management and growth potentail</h5>
+                <h5>Companies with at least USD 1 million and 1 year of operation</h5>
+              </div>
+            </div>
+          </li>
+          <li>
+            <div class="row large">
+
+              <div class="align-center">
+                <h5>Preferred Investments</h5>
+                <p>
+                  Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas eget tincidunt odio. Nunc maximus malesuada nunc vitae accumsan. Aliquam condimentum laoreet dui.
+                </p>
+              </div>
+
+              <div class="col-md-4 col-sm-6 align-center" style="margin-top:20px">
+                <h1 style="font-size:60px"><i class="icon-glyph"></i></h1>
+                <h2>Colleges &amp; Universities</h2>
+              </div>
+
+              <div class="col-md-4 col-sm-6 align-center" style="margin-top:20px">
+                <h1 style="font-size:60px"><i class="icon-glyph-3"></i></h1>
+                <h2>Direct Marketing &amp; MLM</h2>
+              </div>
+
+              <div class="col-md-4 col-sm-6 align-center" style="margin-top:20px">
+                <h1 style="font-size:60px"><i class="icon-glyph-10"></i></h1>
+                <h2>Franchisors</h2>
+              </div>
+
+              <div class="col-md-4 col-sm-6 align-center" style="margin-top:20px">
+                <h1 style="font-size:60px"><i class="icon-glyph-6"></i></h1>
+                <h2>Media &amp; Advertising</h2>
+              </div>
+
+              <div class="col-md-4 col-sm-6 align-center" style="margin-top:20px">
+                <h1 style="font-size:60px"><i class="icon-glyph-1"></i></h1>
+                <h2>Mirco-Finance</h2>
+              </div>
+
+              <div class="col-md-4 col-sm-6 align-center" style="margin-top:20px">
+                <h1 style="font-size:60px"><i class="icon-glyph-2"></i></h1>
+                <h2>Real Estate Developers</h2>
+              </div>
+
+              <div class="col-md-6 col-md-offset-3 col-sm-6 align-center" style="margin-top:20px">
+                <h1 style="font-size:60px"><i class="icon-glyph-4"></i></h1>
+                <h2>Medical Centers &amp; Pharmacies</h2>
+              </div>
+
+            </div>
+          </li>
+        </ul>
+      </div>
+    </section>
+    <!-- Section Services End -->
+  </div>
 </main>
