--- a/disclaimer/index.html
+++ b/disclaimer/index.html
@@ -2,61 +2,51 @@
 layout: default
 ---
 
-<div class="main-container">
-
-	<section class="action-banner overlay">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 text-center">
-					<h2 class="text-white">
-            Disclaimer
-          </h2>
+	<div class="site-banner">
+		<div class="banner-image">
+			<img src="/img/header-4.jpg" alt="Banner">
+		</div>
+		<div class="banner-caption shadow">
+			<div class="caption-wrapper">
+						<h1>Disclaimer</h1>
 				</div>
-			</div><!--end of row-->
-		</div><!--end of container-->
-	</section>
+		</div>
+	</div>
+</header>
+<!-- Site Header End -->
 
-  <section class="image-slider-section">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-8 col-md-offset-2 text-center">
-          <h1>Reminder</h1>
-        </div>
-      </div><!--end of row-->
-      <div class="row">
-        <div class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 text-center">
-          <p>
-            Investing in any businesses involves risks, including illiquidity, lack of dividends, loss of investment and dilution, and it should be done only as part of a diversified portfolio. This platform is targeted solely at investors who are sufficiently sophisticated to understand these risks and make their own investment decisions. This information has not been approved as a financial promotion, and you must carry out your own due diligence.
-          </p>
-        </div>
+<main>
+	<div class="site-wrapper">
+		<!-- Section Breadcrumb -->
+		<div class="site-block white" id="section-breadcrumb">
+			<ol class="breadcrumb">
+				<li><a href="#">Home</a></li>
+				<li class="active">Disclaimer</li>
+			</ol>
+		</div>
+		<!-- Section Breadcrumb End -->
 
-      </div><!--end of row-->
-    </div><!--end of container-->
-  </section>
-
-  <section class="image-slider-section">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-8 col-md-offset-2 text-center">
-          <h1>Disclaimer</h1>
-        </div>
-      </div><!--end of row-->
-      <div class="row">
-        <div class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 text-center">
-          <p>
-            This website is for informational purposes only and does not constitute an offer or solicitation to sell shares or securities in the Company or any related or associated company. Any such offer or solicitation will be made only by means of the Company's confidential Offering Memorandum and in accordance with the terms of all applicable securities and other laws. None of the information or analyses presented are intended to form the basis for any investment decision, and no specific recommendations are intended.<br>
-            <br>
-
-            Accordingly this website does not constitute investment advice or counsel or solicitation for investment in any security. This website does not constitute or form part of, and should not be construed as, any offer for sale or subscription of, or any invitation to offer to buy or subscribe for, any securities, nor should it or any part of it form the basis of, or be relied on in any connection with, any contract or commitment whatsoever.<br>
-            The Company expressly disclaims any and all responsibility for any direct or consequential loss or damage of any kind whatsoever arising directly or indirectly from: (i) reliance on any information contained in the website, (ii) any error, omission or inaccuracy in any such information or (iii) any action resulting therefrom.
-
-          </p>
-        </div>
-
-      </div><!--end of row-->
-    </div><!--end of container-->
-  </section>
-
-
-
-</div>
+		<!-- Section About -->
+		<section class="site-block white" id="section-about">
+			<div class="row large">
+				<div class="col-md-12">
+					<h2 class="section-title">Reminder</h2>
+					<h5 class="section-desc align-justify">
+						Investing in any businesses involves risks, including illiquidity, lack of dividends, loss of investment and dilution, and it should be done only as part of a diversified portfolio.
+						This platform is targeted solely at investors who are sufficiently sophisticated to understand these risks and make their own investment decisions. This information has not been approved as a financial promotion, and you must carry out your own due diligence.
+					</h5>
+					<h2 class="section-title">Disclaimer</h2>
+					<h5 class="section-desc align-justify">
+						This website is for informational purposes only and does not constitute an offer or solicitation to sell shares or securities in the Company or any related or associated company. Any such offer or solicitation will be made only by means of the Company's confidential Offering Memorandum and in accordance with the terms of all applicable securities and other laws. None of the information or analyses presented are intended to form the basis for any investment decision, and no specific recommendations are intended.
+					</h5>
+					<h5 class="section-desc align-justify">
+						Accordingly this website does not constitute investment advice or counsel or solicitation for investment in any security. This website does not constitute or form part of, and should not be construed as, any offer for sale or subscription of, or any invitation to offer to buy or subscribe for, any securities, nor should it or any part of it form the basis of, or be relied on in any connection with, any contract or commitment whatsoever.
+						The Company expressly disclaims any and all responsibility for any direct or consequential loss or damage of any kind whatsoever arising directly or indirectly from: (i) reliance on any information contained in the website, (ii) any error, omission or inaccuracy in any such information or (iii) any action resulting therefrom.
+					</h5>
+						<div class="mobile-space"></div>
+				</div>
+			</div>
+		</section>
+		<!-- Section About End -->
+	</div>
+</main>
