--- a/privacy/index.html
+++ b/privacy/index.html
@@ -2,163 +2,130 @@
 layout: default
 ---
 
-<div class="main-container">
-
-	<section class="action-banner overlay">
-		<div class="container">
-			<div class="row">
-				<div class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 text-center">
-					<h2 class="text-white">
-            Privacy Statement
-          </h2>
-				</div>
-			</div><!--end of row-->
-		</div><!--end of container-->
-	</section>
-
-  <section class="image-slider-section">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 text-center">
-          <p class="lead">
-            Your privacy is important to British Cambridge Inc.<br> (Hereinafter known as British Cambridge).<br>
-            <br>
-            This privacy statement provides information about the personal information that British Cambridge collects, and the ways in which British Cambridge uses that personal information.
-          </p>
-        </div>
-
-      </div><!--end of row-->
-    </div><!--end of container-->
-  </section>
-
-	<section class="team-1">
-		<div class="container">
-			<div class="row space-bottom-small">
-
-				<div class="col-sm-6">
-					<div class="team-1-member">
-						<h2 class="text-left">Personal Information Collection</h2>
-						<h5 class="text-left">British Cambridge may collect and use the following kinds of personal information:</h5>
-            <p class="space-top-small text-justify">
-							<ul style="list-style-type: disc;margin-left:20px" class="text-left">
-	              <li>Information about your use of this website</li>
-								<li>Information about transactions carried out over this website</li>
-								<li>Information that you provide using for the purpose of securing our services.</li>
-							</ul>
-            </p>
-          </div>
-				</div>
-
-				<div class="col-sm-6">
-					<div class="team-1-member">
-						<h2 class="text-left">Using Personal Information</h2>
-						<h5 class="text-left">British Cambridge may use your personal information to:</h5>
-            <p class="space-top-small text-justify">
-							<ul style="list-style-type: disc;margin-left:20px" class="text-left">
-	              <li>Administer this website</li>
-								<li>Collect payments from you</li>
-								<li>Send to you statements and invoices</li>
-								<li>Send you marketing communications.</li>
-								<li>Send to you products that you purchase</li>
-								<li>Supply to you services that you purchase</li>
-								<li>Publish information about you on the website</li>
-								<li>Enable your access to and use of the website service</li>
-							</ul>
-            </p>
-          </div>
-				</div>
-
+<div class="site-banner">
+	<div class="banner-image">
+		<img src="/img/header-4.jpg" alt="Banner">
+	</div>
+	<div class="banner-caption shadow">
+		<div class="caption-wrapper">
+					<h1>Privacy Statement</h1>
 			</div>
-		</div>
-	</section>
-
-	<section class="image-slider-section">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 text-center">
-          <p>
-            Where British Cambridge discloses your personal information to its agents or sub-contractors for these purposes, the agent or sub-contractor in question will be obligated to use that personal information in accordance with the terms of this privacy statement.<br>
-            <br>
-						In addition to the disclosures reasonably necessary for the purposes identified elsewhere above, British Cambridge may disclose your personal information to the extent that it is required to do so by law, in connection with any legal proceedings or prospective legal proceedings, and in order to establish, exercise or defend its legal rights.
-          </p>
-        </div>
-
-      </div><!--end of row-->
-    </div><!--end of container-->
-  </section>
-
-	<section class="team-1">
-		<div class="container">
-			<div class="row space-bottom-small">
-				<div class="col-sm-6">
-					<div class="team-1-member">
-						<h2 class="text-left">Securing Your Data</h2>
-            <p class="space-top-small text-justify">
-							<ul style="list-style-type: disc;margin-left:20px" class="text-left">
-	              <li>British Cambridge will take reasonable technical and organizational precautions to prevent the loss, misuse or alteration of your personal information.</li>
-								<li>British Cambridge will store all the personal information you provide on its secure servers.</li>
-								<li>Information relating to electronic transactions entered into via this website will be protected by encryption technology.</li>
-							</ul>
-            </p>
-          </div>
-				</div>
-
-				<div class="col-sm-6">
-					<div class="team-1-member">
-						<h2 class="text-left">Cross-Border Data Transfers</h2>
-            <p class="space-top-small text-left">
-							<ul style="list-style-type: disc;margin-left:20px" class="text-left">
-	              <li>Information that British Cambridge collects may be stored and processed in and transferred between any of the countries in which British Cambridge operates to enable the use of the information in accordance with this privacy policy.</li>
-								<li>In addition, personal information that you submit for publication on the website will be published on the internet and may be available around the world.</li>
-								<li>You agree to such cross-border transfers of personal information.</li>
-							</ul>
-            </p>
-          </div>
-				</div>
-
-				<div class="col-sm-6">
-					<div class="team-1-member">
-						<h2 class="text-left">Updating This Statement</h2>
-            <p class="space-top-small text-left">
-							<ul style="list-style-type: disc;margin-left:20px" class="text-left">
-	              <li>British Cambridge may update this privacy policy by posting a new version on this website.</li>
-								<li>You should check this page occasionally to ensure you are familiar with any changes</li>
-							</ul>
-            </p>
-          </div>
-				</div>
-
-				<div class="col-sm-6">
-					<div class="team-1-member">
-						<h2 class="text-left">Other Websites</h2>
-            <p class="space-top-small text-left">
-							<ul style="list-style-type: disc;margin-left:20px" class="text-left">
-	              <li>This website contains links to other websites.</li>
-								<li>British Cambridge is not responsible for the privacy policies or practices of any third party.</li>
-							</ul>
-            </p>
-          </div>
-				</div>
-
-			</div>
-		</div>
-	</section>
-
-	<section class="image-slider-section">
-    <div class="container">
-      <div class="row">
-        <div class="col-md-8 col-md-offset-2 col-sm-10 col-sm-offset-1 text-center">
-          <p>
-						If you have any questions about this privacy policy or British Cambridge treatment of your personal information,
-          </p>
-					<p>
-						<a type="button" class="btn btn-primary">Contact Us</a>
-					</p>
-        </div>
-
-      </div><!--end of row-->
-    </div><!--end of container-->
-  </section>
-
-
+	</div>
 </div>
+</header>
+<!-- Site Header End -->
+
+<main>
+	<div class="site-wrapper">
+		<!-- Section Breadcrumb -->
+		<div class="site-block white" id="section-breadcrumb">
+				<ol class="breadcrumb">
+						<li><a href="#">Home</a></li>
+						<li class="active">Privacy Statement</li>
+				</ol>
+		</div>
+		<!-- Section Breadcrumb End -->
+
+		<!-- Section About -->
+		<section class="site-block white" id="section-about">
+			<div class="row large">
+				<div class="col-md-12">
+					<h2 class="section-title">Privacy Statement</h2>
+					<h5 class="section-desc align-justify">
+						Your privacy is important to British Cambridge Inc.
+						(Hereinafter known as British Cambridge).
+						This privacy statement provides information about the personal information that British Cambridge collects, and the ways in which British Cambridge uses that personal information.
+					</h5>
+					<div class="mobile-space"></div>
+				</div>
+
+				<div class="col-md-6">
+					<h2 class="section-title">Using Personal Information</h2>
+					<h5 class="section-desc align-justify">
+						British Cambridge may use your personal information to:
+						<ol class="list-order">
+							<li>Administer this website</li>
+							<li>Collect payments from you</li>
+							<li>Send to you statements and invoices</li>
+							<li>Send you marketing communications</li>
+							<li>Send to you products that you purchase</li>
+							<li>Supply to you services that you purchase</li>
+							<li>Publish information about you on the website</li>
+							<li>Enable your access to and use of the website service</li>
+						</ol>
+					</h5>
+				</div>
+
+				<div class="col-md-6">
+					<h2 class="section-title">Personal Information Collection</h2>
+					<h5 class="section-desc align-justify">
+						British Cambridge may collect and use the following kinds of personal information:
+						<ol class="list-order">
+							<li>Information about your use of this website</li>
+							<li>Information about transactions carried out over this website</li>
+							<li>Information that you provide using for the purpose of securing our services.</li>
+						</ol>
+					</h5>
+				</div>
+
+				<div class="col-md-12">
+					<h5 class="section-desc align-justify">
+						Where British Cambridge discloses your personal information to its agents or sub-contractors for these purposes, the agent or sub-contractor in question will be obligated to use that personal information in accordance with the terms of this privacy statement.
+						In addition to the disclosures reasonably necessary for the purposes identified elsewhere above, British Cambridge may disclose your personal information to the extent that it is required to do so by law, in connection with any legal proceedings or prospective legal proceedings, and in order to establish, exercise or defend its legal rights.					</h5>
+					<div class="mobile-space"></div>
+				</div>
+
+				<div class="col-md-12">
+					<h2 class="section-title">Securing Your Data</h2>
+					<h5 class="section-desc align-justify">
+						British Cambridge may use your personal information to:
+						<ol class="list-order">
+							<li>British Cambridge will take reasonable technical and organizational precautions to prevent the loss, misuse or alteration of your personal information.</li>
+							<li>British Cambridge will store all the personal information you provide on its secure servers.</li>
+							<li>Information relating to electronic transactions entered into via this website will be protected by encryption technology.</li>
+						</ol>
+					</h5>
+				</div>
+
+				<div class="col-md-12">
+					<h2 class="section-title">Cross-Border Data Transfers</h2>
+					<h5 class="section-desc align-justify">
+						<ol class="list-order">
+							<li>Information that British Cambridge collects may be stored and processed in and transferred between any of the countries in which British Cambridge operates to enable the use of the information in accordance with this privacy policy.</li>
+							<li>In addition, personal information that you submit for publication on the website will be published on the internet and may be available around the world.</li>
+							<li>You agree to such cross-border transfers of personal information.</li>
+						</ol>
+					</h5>
+					<h2 class="section-title">Updating This Statement</h2>
+					<h5 class="section-desc align-justify">
+						<ol class="list-order">
+							<li>British Cambridge may update this privacy policy by posting a new version on this website.</li>
+							<li>You should check this page occasionally to ensure you are familiar with any changes</li>
+						</ol>
+					</h5>
+					<h2 class="section-title">Other Websites</h2>
+					<h5 class="section-desc align-justify">
+						<ol class="list-order">
+							<li>This website contains links to other websites.</li>
+							<li>British Cambridge is not responsible for the privacy policies or practices of any third party</li>
+						</ol>
+					</h5>
+				</div>
+			</div>
+		</section>
+
+		<section class="site-block white border-top" id="section-team">
+			<h2 class="section-title text-center"></h2>
+			<div class="row large">
+				<p class="text-center">
+					If you have any questions about this privacy policy or British Cambridge treatment of your personal information.
+				</p>
+				<p class="text-center">
+					<a href="/contact-us/" class="btn btn-black">CONTACT US</a>
+				</p>
+			</div>
+		</div>
+
+
+	</div>
+</main>
