--- a/disclaimer/index.html
+++ b/disclaimer/index.html
@@ -20,7 +20,7 @@ layout: default
 		<!-- Section Breadcrumb -->
 		<div class="site-block white" id="section-breadcrumb">
 			<ol class="breadcrumb">
-				<li><a href="#">Home</a></li>
+				<li><a href="#">Index</a></li>
 				<li class="active">Disclaimer</li>
 			</ol>
 		</div>
